--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
