--- a/socket/package.json
+++ b/socket/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "concurrently \"npm start\" \"cd ../server && npm start\" \"cd ../client && npm start\" "
   },
   "dependencies": {
+    "concurrently": "^7.6.0",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
